--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /.idea/libraries
 .DS_Store
 /build
-=======
+
 # Built application files
 *.apk
 *.ap_
@@ -21,7 +21,7 @@ gen/
 
 # Gradle files
 .gradle/
-build/
+*/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -31,3 +31,6 @@ proguard/
 
 # Log Files
 *.log
+
+*/*.iml
+*.iml
