--- a/burritobackend/src/main/webapp/WEB-INF/web.xml
+++ b/burritobackend/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
         <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
         <init-param>
             <param-name>services</param-name>
-            <param-value>com.appmunki.burritoapp.backend.UserEndpoint2,
+            <param-value>com.appmunki.burritoapp.backend.UserEndpoint,
                 com.appmunki.burritoapp.backend.DishEndpoint,
                 com.appmunki.burritoapp.backend.OrderEndpoint,
                 com.appmunki.burritoapp.backend.DeliverEndpoint</param-value>
